syntax = "proto3";
package grpc;
option go_package = "calc_service/pkg/grpc";

service TaskService {
  rpc GetTask(TaskRequest) returns (TaskResponse);
  rpc SubmitResult(ResultRequest) returns (ResultResponse);
}

message TaskRequest {}

message TaskResponse {
  string id = 1;
  double arg1 = 2;
  double arg2 = 3;
  string operation = 4;
  int64 operation_time = 5;
}

message ResultRequest {
  string id = 1;
  double result = 2;
}

message ResultResponse {
  bool success = 1;
}